--- a/src/views/layout/main.pug
+++ b/src/views/layout/main.pug
@@ -11,13 +11,17 @@ main.main-container
       span.discountprice $125.00
       span.originalprice $250.00
     .controls 
-      output.quantity 
-        button.button.button--minus(type="button" aria-label="decrease quantity to buy")
-          img.button__img(src="./assets/images/icon-minus.svg" alt="")
-        span.quantity__details 0
-        button.button.button--plus(type="button" aria-label="increase quantity to buy")
-          img.button__img(src="./assets/images/icon-plus.svg" alt="")
+      
+      // output.quantity 
+      
+      button.button.button--minus#button--minus(type="button" aria-label="decrease quantity to buy")
+        img.button__img(src="./assets/images/icon-minus.svg" alt="")
+      output.quantity(for="button--minus button--plus" name="quantity") 0
+      button.button.button--plus#button--plus(type="button" aria-label="increase quantity to buy")
+        img.button__img(src="./assets/images/icon-plus.svg" alt="")
       button.button.button--add(type="button" aria-label="add item to cart")
         img.addbutton__img(src="./assets/images/icon-cart.svg" alt="")
+        span.addbutton__text Add to cart
   .gallery-container 
-    include ../blocks/gallery
+    include ../mixins/gallery
+    +gallery
