--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -5,6 +5,11 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title E-Comerce product
+    link(rel="preconnect" href="https://fonts.googleapis.com")
+    link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+    link(href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" 
+    rel="stylesheet")
+    link(rel="stylesheet", href="css/normalize.css")
     link(rel="stylesheet", href="css/styles.css")
     script(src="js/scripts.js" type="module") 
   body 
