--- a/src/views/layout/header.pug
+++ b/src/views/layout/header.pug
@@ -1,18 +1,40 @@
 - var items = ["Collections", "Men", "Women", "About","Contact"]
 header.header
   nav.navbar
-    button.togglemenu(type="button" aria-label="toggle menu")
-      img.togglemenuimg(src="./assets/images/icon-menu.svg" alt="")
-    ul.mainmenu
-      each item in items
-        li.mainmenu__item
-          a.mainmenu__link(href="#")= item
+    button.button.togglemenubutton#togglemenubutton(type="button" aria-label="toggle menu" aria-haspopup="menu" aria-expanded="false")
+      img.buttonicon.togglemenuicon(src="./assets/images/icon-menu.svg" alt="")
+    .menuoverlay.hide
+      ul.mainmenu(role="menu" aria-labelledby="togglemenubutton")
+        each item in items
+          li.mainmenu__item
+            a.mainmenu__link(href="#")= item
   
   img.logo(src="./assets/images/logo.svg" alt="Logo")
   ul.extramenu
     li.extramenu__item
-      button.extramenu__button(type="button" aria-label="cart menu")
-        img.imgcart(src="./assets/images/icon-cart.svg" alt="cart")
+      button.button#cartbutton(type="button" aria-label="cart menu" aria-haspopup="dialog" aria-expanded="false")
+        img.buttonicon(src="./assets/images/icon-cart.svg" alt="cart")
+
+      .cart(role="dialog" aria-lavelledby="cartbutton")
+        h2.cart__title Cart
+        p.emptydescription.hide Your cart is empty
+        form.cartform#cartform
+          ul.cartproducts
+            li.item 
+              img.item__avatar(src="./assets/images/image-product-1-thumbnail.jpg" alt="")
+              .item__text 
+                p.item__description Fall Limited Edition Sneakers
+                p.item__cost 
+                  span.item__unitprice $125.00 x 
+                  span.item__quantity 3 
+                  span.item__totalprice $375.00
+              button.button.item__delete(type="button" aria-label="Delete this item")
+                img.buttonicon(src="./assets/images/icon-delete.svg" alt="")
+
+          button.checkout Checkout
+
+      .cartindicator 3
+
     li.extramenu__item
       a.extramenu__link(href="#" aria-label="go to my profile page")
         img.avatar(src="./assets/images/image-avatar.png" alt="avatar")
