--- a/src/views/layout/main.pug
+++ b/src/views/layout/main.pug
@@ -6,18 +6,19 @@ main.main-container
     .description
       h2.title sneaker company 
       h3.subtitle fall limited edition<br>sneakers
-      p.description These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they’ll withstand everything the weather can offer.
+      p.paragraph These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they’ll withstand everything the weather can offer.
     p.prices
       span.discountprice $125.00
       span.originalprice $250.00
     form.productform
       input(type="hidden", name="id" value="sneakers")
-      button.button.button--minus#button--minus(type="button" aria-label="decrease quantity to buy" aria-controls="buyquantity")
-        img.buttonicon(src="./assets/images/icon-minus.svg" alt="")
-      .input-container(id="buyquantity" role="region" aria-live="polite")  
-        input.quantity#quantity(type="number", name="quantity" value="")
-      button.button.button--plus#button--plus(type="button" aria-label="increase quantity to buy" aria-controls="buyquantity")
-        img.buttonicon(src="./assets/images/icon-plus.svg" alt="")
+      .quantity-controls
+        button.button.button--minus#button--minus(type="button" aria-label="decrease quantity to buy" aria-controls="buyquantity")
+          img.buttonicon(src="./assets/images/icon-minus.svg" alt="")
+        .input-container(id="buyquantity" role="region" aria-live="polite")  
+          input.quantity#quantity(type="number", name="quantity" value="0")
+        button.button.button--plus#button--plus(type="button" aria-label="increase quantity to buy" aria-controls="buyquantity")
+          img.buttonicon(src="./assets/images/icon-plus.svg" alt="")
       button.button.button--add(aria-label="add item to cart")
         img.buttonicon(src="./assets/images/icon-cart.svg" alt="")
         span.addbutton__text Add to cart
