--- a/src/views/layout/header.pug
+++ b/src/views/layout/header.pug
@@ -3,7 +3,7 @@ header.header
   nav.navbar
     button.button.togglemenubutton#togglemenubutton(type="button" aria-label="toggle menu" aria-haspopup="menu" aria-expanded="false")
       img.buttonicon.togglemenuicon(src="./assets/images/icon-menu.svg" alt="")
-    .menuoverlay.hide
+    .menuoverlay.menuoverlay--hide
       ul.mainmenu(role="menu" aria-labelledby="togglemenubutton")
         each item in items
           li.mainmenu__item
