--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -100,15 +100,52 @@ header {
   min-height: 100vh;
   background-color: var(--White);
 }
+@media screen and (min-width: 768px) {
+  .mainmenu {
+    flex-direction: row;
+    width: auto;
+    padding: 0;
+    min-height: 0;
+  }
+}
 .mainmenu__link {
+  position: relative;
   text-decoration: none;
   font-weight: 700;
   font-size: 1.1rem;
   color: var(--Black);
 }
+@media screen and (min-width: 768px) {
+  .mainmenu__link {
+    font-weight: 400;
+    color: var(--Dark-grayish-blue);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .mainmenu__link:hover {
+    color: var(--Black);
+  }
+  .mainmenu__link:hover::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -3rem;
+    width: 100%;
+    height: 4px;
+    background-color: var(--Orange);
+    border-radius: 2px;
+  }
+}
 
 .logo {
   display: block;
+  margin-block-end: 4px;
+}
+@media screen and (min-width: 768px) {
+  .logo {
+    order: -1;
+    margin-right: 1rem;
+  }
 }
 
 .extramenu {
@@ -224,6 +261,26 @@ header {
 .avatar {
   display: block;
   width: 100%;
+  border: 2px solid transparent;
+  border-radius: 50%;
+}
+@media screen and (min-width: 1024px) {
+  .avatar:hover {
+    border: 2px solid var(--Orange);
+  }
+}
+
+.menuoverlay--hide {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .menuoverlay--hide {
+    display: unset;
+    position: static;
+    width: auto;
+    min-height: 0;
+    background-color: transparent;
+  }
 }
 
 .hide {
