--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -60,16 +60,50 @@ header {
 
   background-color: var(--White);
 
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    width: auto;
+    padding: 0;
+    min-height: 0;
+  }
+
   &__link {
+    position: relative;
     text-decoration: none;
     font-weight: 700;
     font-size: 1.1rem;
     color: var(--Black);
+
+    @media screen and (min-width: 768px) {
+      font-weight: 400;
+      color: var(--Dark-grayish-blue);
+    }
+    @media screen and (min-width: 1024px) {
+      &:hover {
+        color: var(--Black);
+      }
+      &:hover::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -3rem;
+        width: 100%;
+        height: 4px;
+        background-color: var(--Orange);
+        border-radius: 2px;
+      }
+    }
   }
 }
 
 .logo {
   display: block;
+  margin-block-end: 4px;
+
+  @media screen and (min-width: 768px) {
+    order: -1;
+    margin-right: 1rem;
+  }
 }
 
 .extramenu {
@@ -202,6 +236,28 @@ header {
 .avatar {
   display: block;
   width: 100%;
+
+  border: 2px solid transparent;
+  border-radius: 50%;
+
+  @media screen and (min-width: 1024px) {
+    &:hover {
+      border: 2px solid var(--Orange);
+    }
+  }
+}
+
+.menuoverlay--hide {
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: unset;
+    position: static;
+    width: auto;
+    min-height: 0;
+
+    background-color: transparent;
+  }
 }
 
 .hide {
