--- a/src/views/layout/main.pug
+++ b/src/views/layout/main.pug
@@ -13,14 +13,14 @@ main.main-container
     form.productform
       input(type="hidden", name="id" value="sneakers")
       .quantity-controls
-        button.button.button--minus#button--minus(type="button" aria-label="decrease quantity to buy" aria-controls="buyquantity")
+        button.button.button--minus#button--minus.button--lighthover(type="button" aria-label="decrease quantity to buy" aria-controls="buyquantity")
           img.buttonicon(src="./assets/images/icon-minus.svg" alt="")
         .input-container(id="buyquantity" role="region" aria-live="polite")  
           input.quantity#quantity(type="number", name="quantity" value="0")
-        button.button.button--plus#button--plus(type="button" aria-label="increase quantity to buy" aria-controls="buyquantity")
+        button.button.button--plus#button--plus.button--lighthover(type="button" aria-label="increase quantity to buy" aria-controls="buyquantity")
           img.buttonicon(src="./assets/images/icon-plus.svg" alt="")
-      button.button.button--add(aria-label="add item to cart")
-        img.buttonicon(src="./assets/images/icon-cart.svg" alt="")
+      button.button.button--add.button--lighthover(aria-label="add item to cart")
+        img.buttonicon.buttonicon--light(src="./assets/images/icon-cart.svg" alt="")
         span.addbutton__text Add to cart
 
   .gallery-container 
