--- a/src/views/mixins/gallery.pug
+++ b/src/views/mixins/gallery.pug
@@ -1,7 +1,11 @@
 mixin gallery(type)
-  - var ClassName = "slide-controls"
+  - var ClassName = "slide-controls slide-controls--hide"
+  - var thumbnailClassName = "thumbnail-container"
+  - var buttonSlideClassName = "button button--slide"
   if (type === "modal")
-    - ClassName = "slide-controls--modal"
+    - ClassName = "slide-controls slide-controls--modal"
+    - thumbnailClassName = "thumbnail-container thumbnail-container--modal"
+    - buttonSlideClassName = "button button--slide button--slidemodal"
   ul.gallery 
     each image in ids
       li.gallery__item 
@@ -9,13 +13,13 @@ mixin gallery(type)
   if (type !== "modal")      
     button.buttonproduct(type="button" aria-label="press to zoom the images")
   div(class= ClassName)
-    button.button.button--slide(type="button" aria-label="click to see previous image")
+    button(class= buttonSlideClassName type="button" aria-label="click to see previous image")
       img.buttonicon.buttonicon--slide(src="./assets/images/icon-previous.svg" alt="")
-    button.button.button--slide(type="button" aria-label="click to see next image")
+    button(class= buttonSlideClassName type="button" aria-label="click to see next image")
       img.buttonicon.buttonicon--slide(src="./assets/images/icon-next.svg" alt="")
   
-  ul.thumbnail-container
+  ul(class= thumbnailClassName)
     each thumbn in ids
       li.thumbnail__item
-        button.thumbnail__button(type="button" aria-label="select image")
+        button.button.thumbnail__button.button--lighthover(type="button" aria-label="select image")
           img.thumbnail__img(src=`./assets/images/image-product-${thumbn}-thumbnail.jpg` alt="")
