--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -7,6 +7,8 @@
 body {
   min-height: 100vh;
   font-family: "Kumbh Sans", sans-serif;
+
+  background-color: var(--White);
 }
 
 .button {
@@ -20,6 +22,9 @@ body {
 
 .buttonicon {
   display: block;
+  &--light {
+    filter: brightness(0) invert(1);
+  }
 }
 
 .gallery,
