--- a/src/sass/layout/main.scss
+++ b/src/sass/layout/main.scss
@@ -1,10 +1,24 @@
 .product {
   display: flex;
   flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row-reverse;
+    width: 87.2%;
+    max-width: 1110px;
+    margin-inline: auto;
+    padding-block: 5rem;
+  }
 }
 
 .text-container {
   padding-inline: 1rem;
+  @media screen and (min-width: 768px) {
+    width: 50%;
+    padding-inline: 3rem;
+  }
 }
 
 .title {
@@ -38,6 +52,12 @@
   margin-block-end: 1.7rem;
 
   font-weight: 700;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
 }
 
 .discountprice {
@@ -56,6 +76,10 @@
     background-color: var(--Pale-orange);
     border-radius: 6px;
   }
+
+  @media screen and (min-width: 768px) {
+    margin-block-end: 1rem;
+  }
 }
 
 .originalprice {
@@ -71,21 +95,31 @@
   width: 100%;
   max-width: 500px;
   margin-inline: auto;
+
+  @media screen and (min-width: 1024px) {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .quantity-controls {
   display: flex;
   align-items: center;
   width: 100%;
+  height: 3.5rem;
 
   background-color: var(--Light-grayish-blue);
   border-radius: 8px;
+
+  @media screen and (min-width: 1024px) {
+    width: 54%;
+  }
 }
 
 .button--minus,
 .button--plus {
-  flex-grow: 0;
-  flex-shrink: 0;
+  position: relative;
   padding-block: 0.98rem;
   padding-inline: 1rem;
 }
@@ -93,16 +127,28 @@
 .input-container {
   padding-block: 0.98rem;
   flex-grow: 1;
-  flex-shrink: 1;
 }
 
 .quantity {
-  font-weight: 700;
+  display: inline-block;
+  width: 100%;
 
+  font-weight: 700;
+  text-align: center;
+
+  border: none;
   background-color: transparent;
+
+  appearance: textfield;
+
+  &::-webkit-inner-spin-button,
+  &::-webkit-outer-spin-button {
+    appearance: none;
+  }
 }
 
 .button--add {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -117,22 +163,24 @@
   background-color: var(--Orange);
   border-radius: 8px;
   box-shadow: 0 3px 10px var(--Orange);
-}
 
-.input-container {
-  width: 100px;
-}
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
 
-.quantity {
-  display: inline-block;
-  width: 100%;
-
-  text-align: center;
-  border: none;
+  @media screen and (min-width: 1024px) {
+    &:hover {
+      border-color: hsl(0, 0%, 100%, 0.4);
+    }
+  }
 }
 
 .gallery-container {
   position: relative;
+  @media screen and (min-width: 768px) {
+    width: 50%;
+    padding-inline: 3rem;
+  }
 }
 
 .gallery {
@@ -140,25 +188,45 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
+  height: 80vw;
   overflow: hidden;
+
+  @media screen and (min-width: 768px) {
+    height: auto;
+    margin-block-end: 1.8rem;
+  }
 
   &__item {
     flex-shrink: 0;
-    flex-grow: 0;
     width: 100%;
-    height: 80vw;
+
+    @media screen and (min-width: 768px) {
+      border-radius: 12px;
+      overflow: hidden;
+    }
   }
 
   &__img {
-    display: block;
-    width: 100%;
-
     object-fit: cover;
-    object-position: 0 -36px;
   }
 }
 
+.gallery__img,
+.thumbnail__img {
+  display: block;
+  width: 100%;
+}
+
 .buttonproduct {
+  position: absolute;
+  top: 0;
+  left: 3rem;
+  width: calc(100% - 6rem);
+  aspect-ratio: 1 / 1;
+  padding: 0;
+
+  background-color: transparent;
+  border: none;
   cursor: default;
   @media screen and (max-width: 767px) {
     display: none;
@@ -174,6 +242,12 @@
   width: 100%;
 
   transform: translateY(-50%);
+
+  &--hide {
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+  }
 }
 
 .button--slide {
@@ -191,6 +265,51 @@
 .thumbnail-container {
   @media screen and (max-width: 767px) {
     display: none;
+  }
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.thumbnail__item {
+  width: 25%;
+}
+
+.thumbnail__button {
+  position: relative;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.thumbnail__button--active {
+  border-color: var(--Orange);
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+    background-color: hsl(0, 0%, 100%, 0.6);
+  }
+}
+
+.button--lighthover {
+  @media screen and (min-width: 1024px) {
+    &:hover::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+
+      background-color: hsl(0, 0%, 100%, 0.4);
+    }
   }
 }
 
