--- a/src/views/layout/header.pug
+++ b/src/views/layout/header.pug
@@ -1,9 +1,9 @@
 - var items = ["Collections", "Men", "Women", "About","Contact"]
-header.header
+header.header#header
   nav.navbar
     button.button.togglemenubutton#togglemenubutton(type="button" aria-label="toggle menu" aria-haspopup="menu" aria-expanded="false")
-      img.buttonicon.togglemenuicon(src="./assets/images/icon-menu.svg" alt="")
-    .menuoverlay.menuoverlay--hide
+      img.buttonicon.togglemenuicon#togglemenuicon(src="./assets/images/icon-menu.svg" alt="")
+    .menuoverlay.menuoverlay--hide.menuoverlay--translate#menuoverlay
       ul.mainmenu(role="menu" aria-labelledby="togglemenubutton")
         each item in items
           li.mainmenu__item
@@ -18,22 +18,11 @@ header.header
       .cart.hide(role="dialog")
         h2.cart__title Cart
         p.emptydescription Your cart is empty
-        form.cartform#cartform
+        form.cartform.hide#cartform
           ul.cartproducts
-            li.item 
-              img.item__avatar(src="./assets/images/image-product-1-thumbnail.jpg" alt="")
-              .item__text 
-                p.item__description Fall Limited Edition Sneakers
-                p.item__cost 
-                  span.item__unitprice $125.00 x 
-                  span.item__quantity 3 
-                  span.item__totalprice $375.00
-              button.button.item__delete(type="button" aria-label="Delete this item")
-                img.buttonicon(src="./assets/images/icon-delete.svg" alt="")
+          button.checkout.button--lighthover Checkout
 
-          button.checkout Checkout
-
-      .cartindicator.hide 3
+      .cartindicator.hide 0
 
     li.extramenu__item
       a.extramenu__link(href="#" aria-label="go to my profile page")
