--- a/src/views/mixins/gallery.pug
+++ b/src/views/mixins/gallery.pug
@@ -2,24 +2,26 @@ mixin gallery(type)
   - var ClassName = "slide-controls slide-controls--hide"
   - var thumbnailClassName = "thumbnail-container"
   - var buttonSlideClassName = "button button--slide"
+  - var galleryItemClassName = "gallery__item gallery__item--normal"
   if (type === "modal")
     - ClassName = "slide-controls slide-controls--modal"
     - thumbnailClassName = "thumbnail-container thumbnail-container--modal"
     - buttonSlideClassName = "button button--slide button--slidemodal"
+    - galleryItemClassName = "gallery__item gallery__item--modal"
   ul.gallery 
     each image in ids
-      li.gallery__item 
+      li(class= galleryItemClassName)
         img.gallery__img(src=`./assets/images/image-product-${image}.jpg` alt="")
   if (type !== "modal")      
-    button.buttonproduct(type="button" aria-label="press to zoom the images")
+    button.button.buttonproduct(type="button" aria-label="press to zoom the images")
   div(class= ClassName)
-    button(class= buttonSlideClassName type="button" aria-label="click to see previous image")
+    button(class= `${buttonSlideClassName} button--slideprev` type="button" aria-label="click to see previous image")
       img.buttonicon.buttonicon--slide(src="./assets/images/icon-previous.svg" alt="")
-    button(class= buttonSlideClassName type="button" aria-label="click to see next image")
+    button(class= `${buttonSlideClassName} button--slidenext` type="button" aria-label="click to see next image")
       img.buttonicon.buttonicon--slide(src="./assets/images/icon-next.svg" alt="")
   
   ul(class= thumbnailClassName)
     each thumbn in ids
       li.thumbnail__item
-        button.button.thumbnail__button.button--lighthover(type="button" aria-label="select image")
+        button.button.thumbnail__button.button--lighthover(type="button" aria-label="select image" data-item= thumbn)
           img.thumbnail__img(src=`./assets/images/image-product-${thumbn}-thumbnail.jpg` alt="")
