--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -12,7 +12,7 @@ html(lang="en")
     link(rel="stylesheet", href="css/normalize.css")
     link(rel="stylesheet", href="css/styles.css")
     script(src="js/scripts.js" type="module") 
-  body 
+  body#body
     include ../layout/header.pug
     include ../layout/main.pug
     include ../layout/modal.pug
