--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -9,5 +9,8 @@
   --Black: hsl(0, 0%, 0%);
   --Black-overlay: hsl(0, 0%, 0%, 75%);
 
+  --Slide-index: 0;
+  --Slide-modal-index: 0;
+
   font-size: 100%;
 }
