--- a/src/sass/layout/overlay.scss
+++ b/src/sass/layout/overlay.scss
@@ -6,9 +6,12 @@
   left: 0;
   width: 100vw;
   min-height: 100vh;
-  z-index: 1;
+  z-index: 2;
 
   background-color: var(--Black-overlay);
+  transform: scale(0);
+
+  transition: transform 0.5s;
 
   @media screen and (max-width: 767px) {
     display: none;
@@ -20,7 +23,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 90%;
+  width: 80%;
+  max-width: 1362px;
 }
 
 .button--close {
@@ -47,4 +51,8 @@
 
 .hidemodal {
   display: none;
+}
+
+.overlay--scale {
+  transform: scale(1);
 }
