--- a/src/views/layout/modal.pug
+++ b/src/views/layout/modal.pug
@@ -1,6 +1,6 @@
 -var ids = ["1","2","3","4"]
 
-.overlay.hidemodal(role="modal")
+.overlay.hidemodal(role="dialog" aria-modal="true")
   .modal-dialog
     button.button.button--close(type="button" aria-label="close model")
       img.buttonicon.buttonicon--light(src="./assets/images/icon-close.svg" alt="")
