--- a/src/views/layout/main.pug
+++ b/src/views/layout/main.pug
@@ -16,7 +16,7 @@ main.main-container
         button.button.button--minus#button--minus.button--lighthover(type="button" aria-label="decrease quantity to buy" aria-controls="buyquantity")
           img.buttonicon(src="./assets/images/icon-minus.svg" alt="")
         .input-container(id="buyquantity" role="region" aria-live="polite")  
-          input.quantity#quantity(type="number", name="quantity" value="0")
+          input.quantity#quantity(type="number", name="quantity" value="0" aria-label="quantity to buy")
         button.button.button--plus#button--plus.button--lighthover(type="button" aria-label="increase quantity to buy" aria-controls="buyquantity")
           img.buttonicon(src="./assets/images/icon-plus.svg" alt="")
       button.button.button--add.button--lighthover(aria-label="add item to cart")
